--- a/MaciptvProvider/src/main/res/layout/iptvbox_settings.xml
+++ b/MaciptvProvider/src/main/res/layout/iptvbox_settings.xml
@@ -8,14 +8,14 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/nginx_login"
+        android:id="@+id/iptvbox_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="20dp">
 
         <ImageView
-            android:id="@+id/nginx_login_imageview"
+            android:id="@+id/iptvbox_login_imageview"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_gravity="start|center_vertical"
@@ -28,37 +28,26 @@
             android:layout_weight="1"
             android:orientation="vertical">
 
-            <!--            <LinearLayout-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="match_parent"-->
-            <!--                android:orientation="horizontal">-->
 
             <TextView
                 android:id="@+id/main_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp" />
-            <!--            </LinearLayout>-->
-
-            <!--            <TextView-->
-            <!--                android:id="@+id/sub_text"-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:text="@string/nginx_info_summary"-->
-            <!--                android:textSize="12sp" />-->
+     
         </LinearLayout>
     </LinearLayout>
 
 
     <LinearLayout
-        android:id="@+id/nginx_info"
+        android:id="@+id/iptvbox_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="20dp">
 
         <ImageView
-            android:id="@+id/nginx_info_imageview"
+            android:id="@+id/iptvbox_info_imageview"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_gravity="start|center_vertical"
@@ -90,6 +79,73 @@
                 android:textSize="12sp" />
         </LinearLayout>
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/tags_login"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="20dp">
+        <ImageView
+            android:id="@+id/tagsiptvbox_login_imageview"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="start|center_vertical"
+            android:layout_marginEnd="20dp"
+            android:scaleType="centerInside" />
 
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <!--            <LinearLayout-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="match_parent"-->
+            <!--                android:orientation="horizontal">-->
+
+            <TextView
+                android:id="@+id/tagsmain_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp" />
+       
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/tags_info"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="20dp">
+
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tagsinfo_main_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tags_sub_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp" />
+        </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
